syntax = "proto3";

package video;

option java_multiple_files = true;
option java_package = "com.example.grpc.video";
option java_outer_classname = "VideoProto";

// 클라이언트 스트리밍 업로드
service VideoService {
  rpc Upload (stream VideoChunk) returns (UploadStatus);
}

message VideoChunk {
  // 첫 메시지에 파일명 설정, 이후 메시지에도 동일 파일명 사용 권장
  string file_name = 1;
  bytes data = 2;
}

message UploadStatus {
  bool ok = 1;
  string message = 2;
  int64 bytes_received = 3;
}
